# needle

./: CMakeLists.txt  README.md
apps/: mlp_resnet.py  models.py  simple_training.py  train_imgae_model.ipynb  train_language_model.ipynb
python/: setup.py
python/needle/: autograd.py  data.py  init.py  nn.py  ops.py  optim.py
python/needle/backend_ndarray/: ndarray.py
src/: ndarray_backend_cpu.cc  ndarray_backend_cuda.cu
src/backend_cpu_dnnl/: CMakeLists.txt  backend_cpu_dnnl_config.h.in  cpu_dnnl.hpp  ndarray_backend_cpu_dnnl.cc
